--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.4"
   },
